2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCallsToPropertiesTest.cs: Add test case with a
	long message chain.

2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConcatenatingCharsTest.cs: New. Unit tests for
	AvoidConcatenatingCharsRule

2010-01-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCallsToPropertiesTest.cs: New. Unit tests for
	AvoidRepetitiveCallsToPropertiesRule

2010-01-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLocalDataStoreSlotTest.cs: New. Unit tests for
	AvoidLocalDataStoreSlotRule

2009-05-14  Jb Evain  <jbevain@novell.com>

	* AvoidMethodWithLargeMaximumStackSizeTest.cs: added unit tests
	for the new rule.

2009-01-27  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewLinqMethodTest.cs: Added new rule.

2008-12-24  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferCharOverloadTest.cs: New. Unit tests for PreferCharOverloadRule

2008-12-11  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test cases for multidim and
	jagged arrays. Adapted from test case on bug #458178

2008-11-09  Jesse Jones  <jesjones@mindspring.com>

	* AvoidRepetitiveCastsTest.cs: Added some more tests (and removed one)
	for the false positive rule fixes.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Tests.Rules.Performance.csproj: Activate makefile integration for all
	the rules projects. Remove the old mdp files as they are no longer
	needed.

2008-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnneededFieldInitializationTest.cs: Fix a failure when 
	tests are compiled with gmcs. csc ignore such initialization.

2008-10-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnneededFieldInitializationTest.cs: Commit the real tests
	and not a dupe of the rule. Thanks to Jesse for pointing this out.

2008-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* CompareWithStringEmptyEfficientlyTest.cs: Add new test case for