@@ -6,7 +6,7 @@
 //	Sebastien Pouliot  <sebastien@ximian.com>
 //
 // Copyright (c) <2007> Nidhi Rawal
-// Copyright (C) 2007-2008 Novell, Inc (http://www.novell.com)
+// Copyright (C) 2007-2008,2010 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -38,6 +38,7 @@ using Mono.Cecil;
 
 using NUnit.Framework;
 using Test.Rules.Fixtures;
+using Test.Rules.Helpers;
 
 namespace Test.Rules.Performance {
 
@@ -752,13 +753,20 @@ namespace Test.Rules.Performance {
 			// not used but we ignore explicit interfaces
 			AssertRuleSuccess<EventCases> ("Test.Rules.Performance.AvoidUncalledPrivateCodeTest.IFoo.remove_Foo");
 
-			// however the compiler will still generate it's own add/remove methods 
-			// that we simply ignore since they are out of the developer's control
-			AssertRuleDoesNotApply<EventCases> ("add_foo");
-			AssertRuleDoesNotApply<EventCases> ("remove_foo");
-
 			AssertRuleSuccess<EventCases> ("add_Bar");
 			AssertRuleSuccess<EventCases> ("remove_Bar");
+		}
+
+		[Test]
+		public void Events_Autogenerated ()
+		{
+			MethodDefinition md = DefinitionLoader.GetMethodDefinition<EventCases> ("add_foo");
+			if (!md.IsSynchronized)
+				Assert.Ignore ("newer versions of CSC (e.g. 10.0) does not set the Synchronized");
+			// older CSC (and xMCS) compilers still generate it's own add/remove methods that set the
+			// synchronize flags and we simply ignore them since they are out of the developer's control
+			AssertRuleDoesNotApply (md);
+			AssertRuleDoesNotApply<EventCases> ("remove_foo");
 		}
 
 		[Test]
