@@ -1,3 +1,11 @@
+2010-04-18  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidUncalledPrivateCodeTest.cs
+	* ConsiderCustomAccessorsForNonVisibleEventsTest.cs:
+		With newer CSC (e.g. 10.0) we cannot assume the event
+		accessor to be auto-generated by the presence of 
+		IsSynchronized. Fix unit test when compiled with CSC
+
 2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidRepetitiveCallsToPropertiesTest.cs: Add test case with a
